# ChangeLog for perl-core/ExtUtils-Manifest
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/perl-core/ExtUtils-Manifest/ChangeLog,v 1.12 2011/08/09 19:27:12 tove Exp $

*ExtUtils-Manifest-1.590.0 (09 Aug 2011)

  09 Aug 2011; Torsten Veller <tove@gentoo.org>
  +ExtUtils-Manifest-1.590.0.ebuild:
  Version bump

  26 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org>
  ExtUtils-Manifest-1.580.0.ebuild:
  Marked ~ppc64 wrt #357599

*ExtUtils-Manifest-1.580.0 (21 May 2011)

  21 May 2011; Torsten Veller <tove@gentoo.org> -ExtUtils-Manifest-1.58.ebuild,
  +ExtUtils-Manifest-1.580.0.ebuild:
  Change version scheme

  13 Sep 2010; Joseph Jezak <josejx@gentoo.org>
  ExtUtils-Manifest-1.58.ebuild:
  Marked ppc stable for bug #330387.

  28 Aug 2010; Raúl Porcel <armin76@gentoo.org>
  ExtUtils-Manifest-1.58.ebuild:
  alpha/ia64/sparc stable wrt #330387

  31 Jul 2010; Markos Chandras <hwoarang@gentoo.org>
  ExtUtils-Manifest-1.58.ebuild:
  Stable on amd64 wrt bug #330387

  30 Jul 2010; Christian Faulhammer <fauli@gentoo.org>
  ExtUtils-Manifest-1.58.ebuild:
  stable x86, bug 330387

  29 Jul 2010; Jeroen Roovers <jer@gentoo.org>
  ExtUtils-Manifest-1.58.ebuild:
  Stable for HPPA (bug #330387).

  14 May 2010; Jeroen Roovers <jer@gentoo.org>
  ExtUtils-Manifest-1.58.ebuild:
  Marked ~hppa (bug #317877).

  12 May 2010; Joseph Jezak <josejx@gentoo.org>
  ExtUtils-Manifest-1.58.ebuild:
  Marked ~ppc for bug #317877.

  09 May 2010; Raúl Porcel <armin76@gentoo.org>
  ExtUtils-Manifest-1.58.ebuild:
  Add ~alpha/~ia64/~sparc wrt #317877

  30 Apr 2010; Torsten Veller <tove@gentoo.org>
  ExtUtils-Manifest-1.58.ebuild:
  Import from perl-experimental for ExtUtils-MakeMaker

*ExtUtils-Manifest-1.58 (06 Dec 2009)

  06 Dec 2009; Torsten Veller <tove@gentoo.org>
  +ExtUtils-Manifest-1.58.ebuild:
  Version bump

*ExtUtils-Manifest-1.57 (11 Oct 2009)

  11 Oct 2009; Kent Fredric <kentfredric@gmail.com>