@@ -1,0 +1,18 @@
+# Copyright 1999-2011 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/perl-core/ExtUtils-Manifest/ExtUtils-Manifest-1.600.0.ebuild,v 1.1 2011/08/25 14:43:11 tove Exp $
+
+EAPI=4
+
+MODULE_AUTHOR=FLORA
+MODULE_VERSION=1.60
+inherit perl-module
+
+DESCRIPTION="Utilities to write and check a MANIFEST file"
+
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86"
+IUSE=""
+
+SRC_TEST="do"
+PREFER_BUILDPL="no"
