@@ -3,14 +3,16 @@ Hash: SHA256
 
 DIST ExtUtils-Manifest-1.58.tar.gz 19650 RMD160 2dd01ead51659049d812bd0695025f8de8986ff0 SHA1 be895feddd212f983e87c817207641df6325f056 SHA256 b1b11a23e1c60fa79ab091cf4ab2d821e2cf08adfb040b53944cf0b021e8bd28
 DIST ExtUtils-Manifest-1.59.tar.gz 28466 RMD160 a7a1e12664b2b86cb4e30714f368440b4eaae305 SHA1 5c6a33e9c7ee65e06d3db450bdc7c64fd0010a8a SHA256 1a4a44d4a53bd2cbd35c91ae979cf4603957b8e821f9921ba7594cedaaac6731
+DIST ExtUtils-Manifest-1.60.tar.gz 28501 RMD160 4084bced0115f4c238f96fad308af106898c8011 SHA1 b07e93f5520e8001a44a92f18572ce47fad44339 SHA256 7780ec97ef787b81a30a9dd86bf6a49de1aa2cc58054be14e9263529ceed636f
 EBUILD ExtUtils-Manifest-1.580.0.ebuild 483 RMD160 41adaeaed8063545e235b6f7a6741e7c0656b11c SHA1 488c4165aabcc523c2b508898d355a40e54da8c1 SHA256 22f4dcbc2c2ac973d3f52d0e8e9747e78c1f5e6213abf319c895a24808fa27eb
 EBUILD ExtUtils-Manifest-1.590.0.ebuild 483 RMD160 4267b20a03807967af971b3ede3c886341d30c4b SHA1 936187731bf402cc11ae5e650955d43dea1cc18f SHA256 1001568c6573b92de22acd1208e1f336e119756516ec034a287bb4b4a74e2291
-MISC ChangeLog 2149 RMD160 9b971fd52657a3fdd7521fa89ecbe69f078ce02f SHA1 f89fc2582dcbc478b1ca3448bd60d2eade374c0a SHA256 8c8fa618bdfdb3af9566107bcf3d010e7a1065a27a7ca54fc367e42f994fdf5d
+EBUILD ExtUtils-Manifest-1.600.0.ebuild 483 RMD160 2e4bd4badb0c40b296b73c502c643e9f801ac436 SHA1 0693e950e2c55855bf6cf746f2ea6389fc6f290d SHA256 d901074c90b1f454cf84bf5fa007e3123092d574e2ec39be770489cc6839429e
+MISC ChangeLog 2292 RMD160 0a219be4167e0aa70e1b7a1a064574de22883c62 SHA1 9eccd4b68aa2c8383a47503b60eefc332f8f1945 SHA256 720c577ad733ac6de9c0b207797190c6cec7ae072dfa687c3f0105416fbf32c2
 MISC metadata.xml 243 RMD160 d43f4b606b8e634bd738c4c4f8609dde57b15a36 SHA1 99bbd4f7bb6278513633afe012d8f1f83293eed0 SHA256 9c5c3cb124940606410d1be40a82430e0ae34c58bd982d3f099e290469796a5a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEAREIAAYFAk5BihYACgkQV3J2n04Eaux1XACgqvYY1HnviWj3CSkaQb0z07J4
-iYsAn0BGaZ8yp2HHrMiOteELYHbzcz1t
-=qj23
+iEYEAREIAAYFAk5WX4QACgkQV3J2n04EauysCACgpbOp5FeF9HX2O/Cv5oVG1QUP
+Pi0AoKIDerECtfZiaUu5I9ZU2S+W7E2O
+=EoZ/
 -----END PGP SIGNATURE-----
