@@ -1,6 +1,12 @@
 # ChangeLog for perl-core/ExtUtils-Manifest
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/ExtUtils-Manifest/ChangeLog,v 1.12 2011/08/09 19:27:12 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/perl-core/ExtUtils-Manifest/ChangeLog,v 1.13 2011/08/25 14:43:11 tove Exp $
+
+*ExtUtils-Manifest-1.600.0 (25 Aug 2011)
+
+  25 Aug 2011; Torsten Veller <tove@gentoo.org>
+  +ExtUtils-Manifest-1.600.0.ebuild:
+  Version bump
 
 *ExtUtils-Manifest-1.590.0 (09 Aug 2011)
 
